Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13493

vvp_set_pagevec_dirty()) ASSERTION( page->mapping ) failed: mapping must be set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      Kernel panic - not syncing: LBUG

      [3301761.261404] format at vvp_io.c:983:vvp_set_pagevec_dirty doesn't end in newline
      [3301761.268917] LustreError: 66515:0:(vvp_io.c:983:vvp_set_pagevec_dirty()) ASSERTION( page->mapping ) failed: mapping must be set. page fffff2b27fb07d80, page->private (cl_page) ffffa0349c1ba600
      [3301761.286015] LustreError: 66515:0:(vvp_io.c:983:vvp_set_pagevec_dirty()) LBUG
      [3301761.293446] Pid: 66515, comm: java 3.10.0-1062.12.1.el7.x86_64 #1 SMP Thu Dec 12 06:44:49 EST 2019
      [3301761.302611] Call Trace:
      [3301761.305246] [<ffffffffc051d7cc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [3301761.311992]  [<ffffffffc051d87c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [3301761.318387]  [<ffffffffc0df983f>] vvp_set_pagevec_dirty+0x38f/0x390 [lustre]
      [3301761.325673]  [<ffffffffc0df98ac>] write_commit_callback+0x6c/0x1d0 [lustre]
      [3301761.332856]  [<ffffffffc09d88c1>] osc_io_commit_async+0x381/0x500 [osc]
      [3301761.339690]  [<ffffffffc0f79b5a>] cl_io_commit_async+0x7a/0x140 [obdclass]
      [3301761.346812]  [<ffffffffc08b4e00>] lov_io_commit_async+0x2c0/0x4c0 [lov]
      [3301761.353647]  [<ffffffffc0f79b5a>] cl_io_commit_async+0x7a/0x140 [obdclass]
      [3301761.360757]  [<ffffffffc0df9baa>] vvp_io_write_commit+0x17a/0x8d0 [lustre]
      [3301761.367859]  [<ffffffffc0dfa895>] vvp_io_write_start+0x595/0x970 [lustre]
      [3301761.374871]  [<ffffffffc0f792f8>] cl_io_start+0x68/0x130 [obdclass]
      [3301761.381369]  [<ffffffffc0f7b4dc>] cl_io_loop+0xcc/0x1c0 [obdclass]
      [3301761.387778]  [<ffffffffc0daeb3a>] ll_file_io_generic+0x5ca/0xac0 [lustre]
      [3301761.394788]  [<ffffffffc0daf4fc>] ll_file_aio_write+0x29c/0x6e0 [lustre]
      [3301761.401714]  [<ffffffffc0dafa40>] ll_file_write+0x100/0x1c0 [lustre]
      [3301761.408289]  [<ffffffffaaa4a870>] vfs_write+0xc0/0x1f0
      
      

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: